@@ -9,22 +9,26 @@ using System.Collections.Generic;
 
 namespace EQExtractor2.OpCodes
 {
+    public class OpCode
+    {
+        public UInt32 Value;
+        public string Name;
+        public ExplorerMethod Explorer;
+
+        public OpCode(string inName, UInt32 inValue)
+        {
+            Name = inName;
+            Value = inValue;
+            Explorer = null;
+
+        }
+    }
+
+    public delegate void ExplorerMethod(StreamWriter OutputStream, byte[] Buffer);
+
     public class OpCodeManager
     {
-        struct OpCode
-        {
-            public UInt32 Value;
-            public string Name;
-
-            public OpCode(string inName, UInt32 inValue)
-            {
-                Name = inName;
-                Value = inValue;
-
-            }
-        }
-
-        private List<OpCode> OpCodeList = new List<OpCode>();
+        public List<OpCode> OpCodeList = new List<OpCode>();
 
         public bool Init(string ConfFile, ref string ErrorMessage)
         {
@@ -93,6 +97,17 @@ namespace EQExtractor2.OpCodes
             return "OP_Unknown";
         }
 
+        public OpCode GetOpCodeByNumber(int OpCodeValue)
+        {
+            foreach (OpCode oc in OpCodeList)
+            {
+                if (oc.Value == OpCodeValue)
+                    return oc;
+            }
+
+            return null;
+        }
+
         public UInt32 OpCodeNameToNumber(string Name)
         {
             foreach (OpCode oc in OpCodeList)
@@ -101,6 +116,19 @@ namespace EQExtractor2.OpCodes
                     return oc.Value;
             }
             return 0;
+        }
+
+        public void RegisterExplorer(string Name, ExplorerMethod Explorer)
+        {
+            foreach (OpCode oc in OpCodeList)
+            {
+                if (oc.Name == Name)
+                {
+                    oc.Explorer = Explorer;
+                    return;
+                }
+            }
+            return;
         }
     }
 }
